# zCore

./: .gitignore  1  1.MD  1.sh  2.sh  README.md
docs/: README-fu740.md
drivers/: Cargo.toml
drivers/src/: lib.rs
drivers/src/builder/: devicetree.rs
drivers/src/bus/: mod.rs  pci.rs  pcie_dw_sifive.rs
drivers/src/irq/: riscv_intc.rs  riscv_plic.rs
drivers/src/irq/x86_apic/: mod.rs
drivers/src/nvme/: foo.rs  interface.rs  mod.rs  nvme_defs.rs  nvme_queue.rs
drivers/src/scheme/: block.rs  irq.rs
drivers/src/virtio/: blk.rs
kernel-hal/: Cargo.toml
kernel-hal/src/bare/arch/riscv/: drivers.rs  trap.rs  vm.rs
kernel-hal/src/bare/arch/x86_64/: mem.rs
linux-object/: Cargo.toml
linux-object/src/fs/: rcore_fs_wrapper.rs
linux-syscall/: Cargo.toml
xtask/: Cargo.toml
xtask/src/: build.rs
zCore/: 1.sh  Cargo.toml  Makefile  build.rs  zcore-fu740.itb
zCore/src/: logging.rs  main.rs
zCore/src/platform/riscv/: entry64.rs
