[package]
name = "linux-object"
version = "0.1.0"
authors = ["Runji Wang <wangrunji0408@163.com>"]
edition = "2018"
description = "Linux kernel objects"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mock-disk = []

[dependencies]
async-trait = "0.1"
log = "0.4"
xmas-elf = "0.7"
bitflags = "1.3"
hashbrown = "0.9"
numeric-enum-macro = "0.2"
zircon-object = { path = "../zircon-object", features = ["elf"] }
kernel-hal = { path = "../kernel-hal", default-features = false }
downcast-rs = { version = "1.2", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
rcore-fs = { path = "../rcore-fs/rcore-fs"}
rcore-fs-sfs = { path = "../rcore-fs/rcore-fs-sfs" }
rcore-fs-ramfs = { path = "../rcore-fs/rcore-fs-ramfs" }
rcore-fs-mountfs = { path = "../rcore-fs/rcore-fs-mountfs" }
rcore-fs-devfs = { path = "../rcore-fs/rcore-fs-devfs" }
cfg-if = "1.0"
zcore-drivers = { path = "../drivers", features = ["virtio"] }
lock = { git = "https://github.com/DeathWish5/kernel-sync", rev = "8486b8" }
smoltcp = { git = "https://github.com/smoltcp-rs/smoltcp", rev = "35e833e3", default-features = false, features = [
    "log",
    "alloc",
    "verbose",
    "proto-ipv4",
    "proto-ipv6",
    "proto-igmp",
    "medium-ip",
    "medium-ethernet",
    "socket-raw",
    "socket-udp",
    "socket-tcp",
    "socket-icmp",
    "async",
] }
